--- a/expfmt/BUILD.bazel
+++ b/expfmt/BUILD.bazel
@@ -16,9 +16,8 @@ go_library(
         "//internal/bitbucket.org/ww/goautoneg",
         "//model",
         "@com_github_golang_protobuf//proto:go_default_library",
-        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
-        "@com_github_matttproud_golang_protobuf_extensions//pbutil:go_default_library",
-        "@com_github_prometheus_client_model//go:go_default_library",
+        "@com_github_matttproud_golang_protobuf_extensions//pbutil",
+        "@com_github_prometheus_client_model//go",
     ],
 )
 
@@ -44,7 +43,7 @@ go_test(
         "//model",
         "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_golang_protobuf//ptypes:go_default_library_gen",
-        "@com_github_matttproud_golang_protobuf_extensions//pbutil:go_default_library",
-        "@com_github_prometheus_client_model//go:go_default_library",
+        "@com_github_matttproud_golang_protobuf_extensions//pbutil",
+        "@com_github_prometheus_client_model//go",
     ],
 )
