--- a/promlog/BUILD.bazel
+++ b/promlog/BUILD.bazel
@@ -6,8 +6,8 @@ go_library(
     importpath = "github.com/prometheus/common/promlog",
     visibility = ["//visibility:public"],
     deps = [
-        "@com_github_go_kit_log//:go_default_library",
-        "@com_github_go_kit_log//level:go_default_library",
+        "@com_github_go_kit_log//:log",
+        "@com_github_go_kit_log//level",
     ],
 )
 
@@ -22,7 +22,7 @@ go_test(
     srcs = ["log_test.go"],
     embed = [":promlog"],
     deps = [
-        "@com_github_go_kit_log//level:go_default_library",
-        "@in_gopkg_yaml_v2//:go_default_library",
+        "@com_github_go_kit_log//level",
+        "@in_gopkg_yaml_v2//:yaml_v2",
     ],
 )
