--- a/promlog/flag/BUILD.bazel
+++ b/promlog/flag/BUILD.bazel
@@ -7,7 +7,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//promlog",
-        "@in_gopkg_alecthomas_kingpin_v2//:go_default_library",
+        "@in_gopkg_alecthomas_kingpin_v2//:kingpin_v2",
     ],
 )
 
