Update to version 0.42.0
Signed-off-by: Radek Ryckowski <radek.ryckowski@gmail.com>

--- a/promlog/flag/BUILD.bazel
+++ b/promlog/flag/BUILD.bazel
@@ -7,7 +7,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//promlog",
-        "@in_gopkg_alecthomas_kingpin_v2//:kingpin_v2",
+        "@com_github_alecthomas_kingpin_v2//:kingpin",
     ],
 )
 
