--- a/config/BUILD.bazel
+++ b/config/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
     deps = [
         "@com_github_mwitkow_go_conntrack//:go-conntrack",
         "@in_gopkg_yaml_v2//:yaml_v2",
+        "@org_golang_x_net//http/httpproxy",
         "@org_golang_x_net//http2",
         "@org_golang_x_oauth2//:oauth2",
         "@org_golang_x_oauth2//clientcredentials",
