--- a/model/BUILD.bazel
+++ b/model/BUILD.bazel
@@ -14,6 +14,9 @@ go_library(
         "silence.go",
         "time.go",
         "value.go",
+        "value_float.go",
+        "value_histogram.go",
+        "value_type.go",
     ],
     importpath = "github.com/prometheus/common/model",
     visibility = ["//visibility:public"],
@@ -36,6 +39,8 @@ go_test(
         "signature_test.go",
         "silence_test.go",
         "time_test.go",
+        "value_float_test.go",
+        "value_histogram_test.go",
         "value_test.go",
     ],
     embed = [":model"],
