--- a/version/BUILD.bazel
+++ b/version/BUILD.bazel
@@ -2,7 +2,11 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "version",
-    srcs = ["info.go"],
+    srcs = [
+        "info.go",
+        "info_default.go",
+        "info_go118.go",
+    ],
     importpath = "github.com/prometheus/common/version",
     visibility = ["//visibility:public"],
     x_defs = {
