--- a/expfmt/BUILD.bazel
+++ b/expfmt/BUILD.bazel
@@ -15,9 +15,10 @@ go_library(
     deps = [
         "//internal/bitbucket.org/ww/goautoneg",
         "//model",
-        "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_matttproud_golang_protobuf_extensions//pbutil",
         "@com_github_prometheus_client_model//go",
+        "@org_golang_google_protobuf//encoding/prototext",
+        "@org_golang_google_protobuf//proto",
     ],
 )
 
@@ -41,9 +42,9 @@ go_test(
     embed = [":expfmt"],
     deps = [
         "//model",
-        "@com_github_golang_protobuf//proto:go_default_library",
-        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
         "@com_github_matttproud_golang_protobuf_extensions//pbutil",
         "@com_github_prometheus_client_model//go",
+        "@org_golang_google_protobuf//proto",
+        "@org_golang_google_protobuf//types/known/timestamppb",
     ],
 )
