--- a/model/BUILD.bazel
+++ b/model/BUILD.bazel
@@ -8,12 +8,16 @@ go_library(
         "fnv.go",
         "labels.go",
         "labelset.go",
+        "metadata.go",
         "metric.go",
         "model.go",
         "signature.go",
         "silence.go",
         "time.go",
         "value.go",
+        "value_float.go",
+        "value_histogram.go",
+        "value_type.go",
     ],
     importpath = "github.com/prometheus/common/model",
     visibility = ["//visibility:public"],
@@ -36,6 +40,8 @@ go_test(
         "signature_test.go",
         "silence_test.go",
         "time_test.go",
+        "value_float_test.go",
+        "value_histogram_test.go",
         "value_test.go",
     ],
     embed = [":model"],
