--- a/sigv4/BUILD.bazel
+++ b/sigv4/BUILD.bazel
@@ -13,6 +13,7 @@ go_library(
         "@com_github_aws_aws_sdk_go//aws:go_default_library",
         "@com_github_aws_aws_sdk_go//aws/credentials:go_default_library",
         "@com_github_aws_aws_sdk_go//aws/credentials/stscreds:go_default_library",
+        "@com_github_aws_aws_sdk_go//aws/endpoints:go_default_library",
         "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
         "@com_github_aws_aws_sdk_go//aws/signer/v4:go_default_library",
     ],
@@ -37,7 +38,6 @@ go_test(
         "@com_github_aws_aws_sdk_go//aws/credentials:go_default_library",
         "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
         "@com_github_aws_aws_sdk_go//aws/signer/v4:go_default_library",
-        "@com_github_prometheus_client_golang//prometheus/promhttp",
         "@com_github_stretchr_testify//require",
         "@in_gopkg_yaml_v2//:yaml_v2",
     ],
