--- a/config/BUILD.bazel
+++ b/config/BUILD.bazel
@@ -4,6 +4,7 @@ go_library(
     name = "config",
     srcs = [
         "config.go",
+        "headers.go",
         "http_config.go",
     ],
     importpath = "github.com/prometheus/common/config",
@@ -28,10 +29,14 @@ go_test(
     name = "config_test",
     srcs = [
         "config_test.go",
+        "headers_test.go",
         "http_config_test.go",
         "tls_config_test.go",
     ],
     data = glob(["testdata/**"]),
     embed = [":config"],
-    deps = ["@in_gopkg_yaml_v2//:yaml_v2"],
+    deps = [
+        "@com_github_stretchr_testify//require",
+        "@in_gopkg_yaml_v2//:yaml_v2",
+    ],
 )
